--- a/_posts/计算机/2017-08-03-系统常用服务.md
+++ b/_posts/计算机/2017-08-03-系统常用服务.md
@@ -39,7 +39,7 @@ memcached -m 32 -p 11211 -d
      c.NotebookApp.open_browser = False # 关闭自动打开浏览器
      c.NotebookApp.port = 8888 # 端口随意指定
      c.NotebookApp.password = u'sha1:d8334*******' # 复制前一步生成的密钥
-
+     
      作者：叶俊贤
      链接：https://www.jianshu.com/p/a9de7a089834
      來源：简书
@@ -67,7 +67,6 @@ memcached -m 32 -p 11211 -d
   3. 打开浏览器，输入地址： https://localhost:8888/就可以使用服务器端的jupyter notebook 了。
 
   参考： [实战SSH端口转发](https://www.ibm.com/developerworks/cn/linux/l-cn-sshforward/)
-  
 + **批量杀死某进程**
 
      ```bash
@@ -77,8 +76,8 @@ memcached -m 32 -p 11211 -d
      
 + **终端（python输出）高亮显示**
     　开头部分：\033[显示方式;前景色;背景色m 
-结尾部分：\033[0m     
-完整格式： \033[显示方式;前景色;背景色m要打印的文字\033[0m  　　 如果有空格，空格也会打印出来
+     结尾部分：\033[0m     
+     完整格式： \033[显示方式;前景色;背景色m要打印的文字\033[0m  　　 如果有空格，空格也会打印出来
      
      ```
      # 显示方式: 0（默认值）、1（高亮，即加粗）、4（下划线）、7（反显）、
@@ -138,7 +137,6 @@ root       soft    nproc     unlimited
   MAC的鼠标与触摸板都是采用的自然滑滚，这对于频繁切换windows／mac的人简直要崩溃：鼠标滚轮不一样啊。那么推荐可以单独对MAC的鼠标与触摸板进行[滑滚设置的插件](https://github.com/pilotmoon/Scroll-Reverser)。    
   
 + **MAC安装MysqlClinet**
-  
 ```
 conda install mysqlclient
 ```
@@ -268,6 +266,27 @@ docker container run -p 8888:3000 --name first -it test /bin/bash -c "sh run.sh"
   Ctrl+y： 粘贴至光标后
   !!：   执行上一条命令
   !blah：执行最近的以 blah 开头的命令，如 !ls
+  ```
+
+* docker login issue:
+
+  ```
+  docker login https://hub.infervision.com
+  Username: axingle
+  Password:
+  Error response from daemon: Get https://hub.infervision.com/v2/: unauthorized: authentication required
+  解决方案：
+  
+  1.打开终端，su root 输入密码
+  2.打开 vim /etc/docker/daemon.json（若没有自行创建）
+  3.写入：
+  
+  {
+  "registry-mirrors":["https://hub.docker.com"] # 视情况而定
+  }
+  4.重启一下docker：
+  systemctl daemon-reload
+  systemctl restart docker
   ```
 
   
