--- a/_posts/计算机/2017-07-06-Linux常用命令.md
+++ b/_posts/计算机/2017-07-06-Linux常用命令.md
@@ -91,13 +91,27 @@ iptables -I INPUT 1 -p udp --dport 60000:61000 -j ACCEPT
 # 开放 60000 - 61000端口
 ```
 
+## 根据PID查出docker container
+
+```
+# 找到该PID的最上层父进程pid
+pstree -p |grep -n5 PID
+# 得到父进程pid后，遍历所有容器的init 进程进行匹配
+docker ps |awk '{print $1}' |grep -v CONTAINER |xargs docker inspect -f '{{.State.Pid}}{{.Config.Hostname}}' |grep father_pid
+# 利用上面输出的container id 进行遍历
+docker ps |grep container_id
+```
+
+
 ## 服务器传文件
 
 ```
 # 已经存在的文件不传输
 find . -type f -exec chmod a-w a-w '{}' \;
 # 然后 scp
-scp target:IP:/home/xxx   ./
+scp targetIP:/home/xxx   ./
+# 或者使用rsync 
+rsync -avuP targetIP:/home/xxx ./
 ```
 
 
